# moodgraph-pub

./: .gitignore  README.md  cloudbuild.yaml
api/: Dockerfile  cloudbuild.yaml  dockerfile  emotion_api.py  hello.py  pyproject.toml  requirements.txt  vercel.json
api/notebooks/: finetuning.ipynb  preprocessing-and-eda.ipynb
moodgraph-nuxt/: nuxt.config.ts  package.json
moodgraph-nuxt/app/assets/css/: main.css
moodgraph-nuxt/app/components/: AdviceFlow.vue  FeedbackSection.vue  RecommendationFlow.vue  TechniqueCard.vue
moodgraph-nuxt/app/composables/: useAdvice.ts  useAuth.ts  useEmotionAnalysis.ts  useMockData.ts  useMoodEntries.ts  useTherapeuticTechniques.ts  useTriggerAnalysis.ts
moodgraph-nuxt/app/layouts/: default.vue
moodgraph-nuxt/app/middleware/: auth.ts
moodgraph-nuxt/app/pages/: analytics.vue  entry.vue  history.vue  index.vue  profile.vue  recommendations.vue
moodgraph-nuxt/app/pages/auth/: callback.vue  login.vue  register.vue
moodgraph-nuxt/app/types/: index.ts
moodgraph-nuxt/server/api/: analyze.post.ts
moodgraph-nuxt/server/api/advice/: generate.post.ts
moodgraph-nuxt/server/api/feedback/: submit.post.ts
moodgraph-nuxt/server/api/techniques/: recommend.post.ts
moodgraph-nuxt/server/api/trigger/: analyze.post.ts
