[project]
name = "emotion-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.13",
    "numpy>=2.3.0",
    "protobuf>=6.31.1",
    "pydantic>=2.11.7",
    "sentencepiece>=0.2.0",
    "torch>=2.7.1",
    "transformers>=4.52.4",
    "uvicorn[standard]>=0.34.3",
]
